/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";
package exec.bit.data;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "ExecRPC";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

import "ExecutionProtos.proto";
import "UserBitShared.proto";

enum RpcType {
  ACK = 1;
  
  // all return ack.
  REQ_STREAM_COMPLETE = 2;
  REQ_RECORD_BATCH = 3;
  REQ_RECEIVER_FINISHED = 4;
  REQ_OOB_MESSAGE = 5;
  REQ_DLR_MESSAGE = 6;
}

enum DlrMessageType {
  ACTIVATE_FRAGMENTS = 0;
  RESERVE_RESOURCE = 1;
  RELEASE_RESOURCE = 2;
  CANCEL_FRAGMENTS = 3;
}

message FragmentRecordBatch {
  optional exec.shared.QueryId query_id = 1;
  optional int32 receiving_major_fragment_id = 2;
  repeated int32 receiving_minor_fragment_id = 3; 
  optional int32 sending_major_fragment_id = 4;
  optional int32 sending_minor_fragment_id = 5;
  optional bytes arrow_record_batch = 6;

  // for perf tracking
  optional int64 send_epoch_timestamp = 11;
  optional int64 recv_epoch_timestamp = 12;
}

message FragmentStreamComplete {
  optional exec.shared.QueryId query_id = 1;
  optional int32 receiving_major_fragment_id = 2;
  repeated int32 receiving_minor_fragment_id = 3; 
  optional int32 sending_major_fragment_id = 4;
  optional int32 sending_minor_fragment_id = 5;
}

message FinishedReceiver {
  optional FragmentHandle receiver = 1;
  optional FragmentHandle sender = 2;
}

message OOBMessage {
  optional string type = 1;
  optional bytes data = 2;
  optional exec.shared.QueryId query_id = 3;
  optional int32 receiving_major_fragment_id = 4;
  repeated int32 receiving_minor_fragment_id = 5;
  optional int32 receiving_operator_id = 6;
  optional int32 sending_minor_fragment_id = 7;
  optional bool isOptional = 8 [default = true]; //whether this message may be ignored by the receiver
  optional int32 sending_major_fragment_id = 9 [default = -1];
  optional int32 sending_operator_id = 10 [default = -1];
  optional bool shrink_memory_request = 11; // this is a shrink memory request to the operator
  repeated int32 original_buffer_length = 12; // length for each original data buffer
}

message DlrProtoMessage {
  optional exec.shared.QueryId query_id = 1;
  optional int32 command = 2;
}
